feat: add authentication, logging, and validation with JWT, Serilog, and FluentValidation

--- a/src/KBA.Framework.Api/appsettings.json
+++ b/src/KBA.Framework.Api/appsettings.json
@@ -2,12 +2,63 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
+  "DatabaseSettings": {
+    "Provider": "SqlServer",
+    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true",
+    "CommandTimeout": 30,
+    "EnableRetryOnFailure": true,
+    "MaxRetryCount": 3,
+    "MaxRetryDelay": "00:00:05",
+    "EnableSensitiveDataLogging": false,
+    "EnableDetailedErrors": false,
+    "MigrationsAssembly": "KBA.Framework.Infrastructure"
+  },
+  "EntityFramework": {
+    "UseQuerySplitting": true,
+    "QuerySplittingBehavior": "SplitQuery",
+    "EnableLazyLoading": false,
+    "UseNoTracking": true,
+    "BatchSize": 100,
+    "CommandTimeout": 30
+  },
+  "JwtSettings": {
+    "SecretKey": "YourSuperSecretKeyThatShouldBeAtLeast32CharactersLong!",
+    "Issuer": "KBA.Framework",
+    "Audience": "KBA.Framework.Client",
+    "ExpirationMinutes": 60,
+    "RefreshTokenExpirationDays": 7
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore": "Information"
+      "Microsoft.EntityFrameworkCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/log-.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 30,
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "AllowedHosts": "*"
 }
