Communication gRPC entre Services

--- a/microservices/KBA.IdentityService/appsettings.json
+++ b/microservices/KBA.IdentityService/appsettings.json
@@ -8,7 +8,12 @@
   "AllowedHosts": "*",
   "Urls": "http://localhost:5001",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true",
+    "WriteConnection": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true",
+    "ReadConnection": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkDb_ReadReplica;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
+  "GrpcServices": {
+    "PermissionService": "http://localhost:5004"
   },
   "JwtSettings": {
     "SecretKey": "VotreCleSecrete_MinimumDe32Caracteres_PourSecuriteOptimale",
