--- a/microservices/KBA.PermissionService/appsettings.json
+++ b/microservices/KBA.PermissionService/appsettings.json
@@ -9,7 +9,12 @@
   "Urls": "http://localhost:5004",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true",
+    "WriteConnection": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true",
+    "ReadConnection": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkDb_ReadReplica;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true",
     "Redis": "localhost:6379"
+  },
+  "GrpcServices": {
+    "IdentityService": "http://localhost:5001"
   },
   "JwtSettings": {
     "SecretKey": "VotreCleSecrete_MinimumDe32Caracteres_PourSecuriteOptimale",
