--- a/microservices/appsettings.shared.json
+++ b/microservices/appsettings.shared.json
@@ -1,6 +1,16 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true",
+    "WriteConnection": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true",
+    "ReadConnection": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkDb_ReadReplica;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true",
+    "Additional": {
+      "AnalyticsDb": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkAnalytics;Trusted_Connection=true;TrustServerCertificate=true",
+      "LoggingDb": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkLogs;Trusted_Connection=true;TrustServerCertificate=true"
+    }
+  },
+  "GrpcServices": {
+    "PermissionService": "http://localhost:5004",
+    "IdentityService": "http://localhost:5001"
   },
   "JwtSettings": {
     "SecretKey": "VotreCleSecrete_MinimumDe32Caracteres_PourSecuriteOptimale",
