--- a/microservices/KBA.OrderService/appsettings.json
+++ b/microservices/KBA.OrderService/appsettings.json
@@ -2,19 +2,21 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Grpc": "Debug"
     }
   },
   "AllowedHosts": "*",
-  "Urls": "http://localhost:5002",
+  "Urls": "http://localhost:5005",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true",
     "WriteConnection": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true",
     "ReadConnection": "Server=(localdb)\\mssqllocaldb;Database=KBAFrameworkDb_ReadReplica;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
   "GrpcServices": {
+    "IdentityService": "http://localhost:5001",
     "PermissionService": "http://localhost:5004",
-    "IdentityService": "http://localhost:5001"
+    "ProductService": "http://localhost:5002"
   },
   "JwtSettings": {
     "SecretKey": "VotreCleSecrete_MinimumDe32Caracteres_PourSecuriteOptimale",
@@ -24,10 +26,5 @@
   },
   "Serilog": {
     "SeqUrl": "http://localhost:5341"
-  },
-  "ExternalServices": {
-    "IdentityServiceUrl": "http://localhost:5001",
-    "PermissionServiceUrl": "http://localhost:5004",
-    "TenantServiceUrl": "http://localhost:5003"
   }
 }
