--- a/microservices/KBA.PermissionService/KBA.PermissionService.csproj
+++ b/microservices/KBA.PermissionService/KBA.PermissionService.csproj
@@ -24,6 +24,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\KBA.Framework.Domain\KBA.Framework.Domain.csproj" />
+    <ProjectReference Include="..\KBA.Framework.Grpc\KBA.Framework.Grpc.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.60.0" />
   </ItemGroup>
 
 </Project>
